welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:9: error: not found: value +
			case ( (e + 10),_,_) => return 5
                                  ^blueTicket:10: error: not found: value +
			case ((f + 10),_,_) => return 5
                                 ^